--- a/josh.html
+++ b/josh.html
@@ -6,6 +6,27 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <label
+        >Enter number followed by spaces for function myLastIndexOf():
+      </label>
+      <br />
+      <input type="text" id="lastIndexText" /><br />
+    </div>
+    <div>
+      <label
+        >Enter target element with no spaces for myLastIndexOf():
+      </label>
+      <br />
+      <input type="text" id="lastIndexArgument" /><br />
+    </div>
+    <div>
+      <button type = "button" id = "lastIndexButton">Find Last Index of Number</button>
+    </div>
+    <div>
+      <label>Result: </label>
+      <textarea class = "lastIndexResult"></textarea>
+    </div>
   </body>
   <script>
     src = "josh.js";
