Add html functionality for myLastIndexOf()

--- a/josh.html
+++ b/josh.html
@@ -8,27 +8,29 @@
   <body>
     <div>
       <label
-        >Enter number followed by spaces for function myLastIndexOf():
+        >Enter numbers followed by spaces to create array for function
+        myLastIndexOf():
       </label>
       <br />
       <input type="text" id="lastIndexText" /><br />
     </div>
+
     <div>
-      <label
-        >Enter target element with no spaces for myLastIndexOf():
-      </label>
+      <label>Enter single target element with no spaces for myLastIndexOf(): </label>
       <br />
       <input type="text" id="lastIndexArgument" /><br />
     </div>
+
     <div>
-      <button type = "button" id = "lastIndexButton">Find Last Index of Number</button>
+      <button type="button" id="lastIndexButton">
+        Find Last Index of Number
+      </button>
     </div>
+
     <div>
       <label>Result: </label>
-      <textarea class = "lastIndexResult"></textarea>
+      <textarea class="lastIndexResult"></textarea>
     </div>
   </body>
-  <script>
-    src = "josh.js";
-  </script>
+  <script src="josh.js"></script>
 </html>
