--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/index.css" />
-		<title>ASSIGNMENT 2 HOMEPAGE</title>
-	</head>
-	<body></body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index.css" />
+    <title>ASSIGNMENT 2 HOMEPAGE</title>
+  </head>
+  <body>
+    <h2>
+      <a href="josh.html"
+        >Joshua Ramcharan (myLastIndexOf, grabKeys, grabValues)</a
+      >
+    </h2>
+  </body>
 </html>
