Fixed Thanemul Output

--- a/thanemul.html
+++ b/thanemul.html
@@ -14,7 +14,7 @@
 				<input
 					type="text"
 					id="inputArray"
-					placeholder="Enter an array"
+					placeholder="Enter an array separated by commas"
 				/>
 				<input
 					type="text"
@@ -25,7 +25,9 @@
 			</div>
 			<div>
 				<h3>Result:</h3>
-				<div id="includesResult"></div>
+				<div id="includesResult">
+					<p id="includes_result"></p>
+				</div>
 			</div>
 		</div>
 
@@ -35,7 +37,7 @@
 				<input
 					type="text"
 					id="indexArray"
-					placeholder="Enter an array"
+					placeholder="Enter an array separated by commas"
 				/>
 				<input
 					type="text"
@@ -46,7 +48,9 @@
 			</div>
 			<div>
 				<h3>Result:</h3>
-				<div id="indexOfResult"></div>
+				<div id="indexOfResult">
+					<p id="indexOf_result"></p>
+				</div>
 			</div>
 		</div>
 
@@ -56,14 +60,16 @@
 				<input
 					type="text"
 					id="pushArray"
-					placeholder="Enter an array"
+					placeholder="Enter an array separated by commas"
 				/>
 				<input type="text" id="pushArg" placeholder="Element to push" />
 				<button onclick="runMyPush()">Run myPush</button>
 			</div>
 			<div>
 				<h3>Result:</h3>
-				<div id="pushResult"></div>
+				<div id="pushResult">
+					<p id="push_result"></p>
+				</div>
 			</div>
 		</div>
 		<div>
