--- a/caden.html
+++ b/caden.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/caden.css" />
+		<link rel="stylesheet" type="text/css" href="css/caden.css" />
 		<title>Caden's Functions</title>
 		<script src="caden.js"></script>
 	</head>
